# Cam_Capture_and_Receive

./: .gitignore  README.md  checkong.py
Client/: CMakeLists.txt
Client/src/: PictureCapture.cpp
Server/MessageReceiver/: app.py
Server/MessageReceiver/templates/: index.html
